data/diff_tests/wasmtime/call_EdgeCaseFailuresinbr_table_3771.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\02\8c\80\80\80\00\01\03\6d\6f"
    "\64\04\66\75\6e\63\00\00\03\82\80\80\80\00\01\01"
    "\0a\95\80\80\80\00\01\8f\80\80\80\00\00\41\01\10"
    "\00\02\40\41\02\0e\01\00\01\0b\0b"
  )
""
)